# sqs-extended-client-rust

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: cargo_clippy.yml  code_coverage.yml
src/: lib.rs  main.rs
tests/: integration_test.rs  test_data.txt
