[package]
name = "sqs-extended-client"
version = "0.1.0"
edition = "2024"
description = "AWS SQS extended client functionality from amazon-sqs-java-extended-client-lib"
license = "MIT OR Apache-2.0"

[dependencies]
aws-config = "1.8.2"
aws-sdk-s3 = "1.98.0"
aws-sdk-sqs = "1.76.0"
aws-smithy-runtime = "1.8.5"
aws-smithy-runtime-api = "1.8.4"
aws-smithy-types = "1.3.2"
regex = "1.11.2"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.46.1", features = ["full"] }
uuid = { version = "1.17.0", features = ["v4"] }

[dev-dependencies]
testcontainers-modules = { version = "0.12.1", features = ["localstack"] }
